--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <h1>GAR</h1>
-        <h2>COMPANY</h2>
+        <h2>COMPANYsds</h2>
       </div>
       <div class="logos">
         <img
